# home_task

./: .gitignore  README.md  base_test.py  conftest.py  pyproject.toml  streamer_search_test.py
allure-results/: 16ef6af2-ce3b-49f4-bce3-b36894ddcb92-container.json  31324b09-5cd4-4576-99a0-6bc2fe8e5f1c-container.json  4b68abf1-5eff-4791-94e1-9edd29dc9412-result.json  506d7b35-4909-44a7-9116-3b38c8cca548-container.json  7404e514-a43c-44ca-82b3-01d27415d87c-container.json  bf1cb434-8adc-4e1d-837c-22893fd5b3fd-container.json  da631a95-4e91-4028-aa9b-22310e2dc28d-container.json
src/api/: base_client.py  marketstack_client.py
src/enums/: drivers_type.py
src/ui/locators/: twitch_live_chanel_locators.py  twitch_search_result_locators.py
src/ui/pages/: base_page.py  twitch_home_page.py  twitch_live_chanel_page.py  twitch_search_resault_page.py
tests/api/: api_test.py  conftest.py
tests/api/allure-results/: 1253925c-f810-409f-aa57-3db82909295f-container.json  1af5462f-4f50-4c5d-bea6-84a81c9edb74-result.json  1d3e1355-13a9-42b5-85d6-5f0907ee6b07-container.json  31ed4bcb-c7c9-45df-87eb-822889e8a204-container.json  36faf79f-bc19-43d6-96d8-26dc0a27029a-result.json  3b86386c-c00b-4181-8763-b9d2b426f91c-container.json  528b9df8-9e46-4de7-aeea-85f1ef579911-container.json  545a4277-cd57-4fb1-bc3c-c63fa714dd4a-container.json  55ad338f-7c99-425d-8c22-ea30bd7f3064-container.json  689fdfee-4b46-45ba-af39-7e58f411242f-container.json  68c6a31c-9788-4d56-aefd-479d94f0fd11-result.json  75009441-0644-4629-beab-d074e88a7ee2-container.json  927232bd-3bb7-4eec-86c4-2a3247c3ef3d-result.json  (+7 more)
(+1 files in other folders)
